# shell

./: .clang-format  .clang-tidy  .gitignore  .trivyignore  .wshellrc.example  CMakeLists.txt  CMakePresets.json  COPILOT_INSTRUCTIONS.md  Doxyfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  crap.cpp  debug_parser  debug_parser.cpp  out.txt  test_phase1.sh  wshell-sbom.spdx  wshell-sbom.spdx.json
.cache/clangd/index/: command_parser.cpp.874918E9FC68176F.idx  command_parser.cpp.AB0DC35A908DAC08.idx  command_parser.h.3763D6B7FEC10B8D.idx  command_parser.h.4516A57F4BCB2EEB.idx  fuzz_command_parser.cpp.EDA9B4E0C182F49C.idx  fuzz_shell_core.cpp.7E6BCE514F1CE535.idx  main.cpp.8E04584D7A378AD0.idx  main.cpp.939FE3E788678B0C.idx  shell_core.cpp.526EF7F9490F8AB8.idx  shell_core.cpp.BDBBB047CA1ACA7A.idx  shell_core.h.2641645D76D3EE94.idx  shell_core.h.C3917199EBA4C8DD.idx  test_command_parser.cpp.75A523B45AF37378.idx  test_command_parser.cpp.D87C94F2258262DF.idx  test_shell_core.cpp.917A4865958A2934.idx  test_shell_core.cpp.C1D74169EC7E5D13.idx
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements-dev.txt  test-environment.sh
.github/: AI_CODING_GUIDELINES.md  copilot-instructions.md
.github/codeql/: codeql-config.yml
.github/workflows/: .yamllint.yml  benchmarks.yml  ci.yml  codeql-config.yml  docs.yml  documentation.yml  fuzzing.yml  release.yml  security.yml  static-analysis.yml  test-devcontainer.yml
bench/: CMakeLists.txt  bench_command_parser.cpp  bench_parser.cpp  bench_shell_core.cpp
cmake/toolchains/: clang-libcxx.cmake
docs/: CONFIG.md  DASHBOARD.md  IMPLEMENTATION_SUMMARY.md  config_di_examples.cpp  grammar.bnf  grammar.ebnf  input_source_examples.cpp  io_di_examples.cpp
fuzz/: CMakeLists.txt  fuzz_command_parser.cpp  fuzz_parse.cpp  fuzz_parse_line.cpp  fuzz_parse_program.cpp  fuzz_shell_core.cpp
include/: ggg.cpp
include/shell/: ast.hpp  ast_printer.hpp  ast_to_command_model.hpp  built_ins.hpp  command_model.hpp  config.hpp  config_impl.hpp  exec.hpp  execution_policy.hpp  executor.hpp  history.hpp  input_source.hpp  lexer.hpp  output_destination.hpp  parser.hpp  platform.h  platform_types.hpp  shell_interpreter.hpp  shell_process_context.h  version.hpp.in
scripts/: USAGE.md  benchmark.ps1  benchmark.sh  build-flamegraphs.sh  build.ps1  build.sh  clean.ps1  clean.sh  common.sh  configure.ps1  configure.sh  coverage.ps1  coverage.sh  fuzz.ps1  fuzz.sh  generate-flamegraphs.sh  prerequisites.ps1  prerequisites.sh  run-shell.ps1  run-shell.sh  sbom.ps1  sbom.sh  setup-github-pages.sh  test.ps1  test.sh
src/: exec_common.cpp  exec_linux.cpp  exec_macos.cpp  exec_win32.cpp  lexer.cpp  main.cpp  parser.cpp
src/lib/: CMakeLists.txt  command_parser.cpp  command_parser.h  execution_policy.cpp  executor_win32.cpp  lexer.cpp  parser.cpp  shell_core.cpp  shell_core.h
src/lib/ast/: ast_printer.cpp
src/lib/builtins/: built_ins.cpp  cd_builtin.cpp  exit_builtin.cpp  history_builtin.cpp  kill_builtin.cpp  pwd_builtin.cpp
src/lib/executor/: executor_posix.cpp  executor_win32.cpp  shell_process_context.cpp
src/lib/parser/: ast_to_command_model.cpp  config.cpp  input_source.cpp  lexer.cpp  output_destination.cpp  parser.cpp
src/lib/platform/: platform_posix.cpp  platform_win32.cpp
src/main/: CMakeLists.txt  main.cpp
src/main/exec/: exec_common.cpp  exec_linux.cpp  exec_macos.cpp  exec_win32.cpp
src/main/parser/: config.cpp  lexer.cpp  output_destination.cpp  parser.cpp
test/: CMakeLists.txt  line_continuation_tests.cpp  shell_history_tests.cpp  shell_substitution_tests.cpp  test_command_parser.cpp  test_config.cpp  test_output_destination.cpp  test_parser.cpp  test_shell_core.cpp
tests/: test_parser.cpp
